--- a/ec2-instance/tasks/main.yml
+++ b/ec2-instance/tasks/main.yml
@@ -4,6 +4,7 @@
 - import_tasks: net-info.yml
 - import_tasks: sec-group.yml
 - import_tasks: ec2-instance.yml
+- import_tasks: apache.yml
 - meta: refresh_inventory
 - pause:
     seconds: 30
