--- a/ec2-instance/tasks/net-info.yml
+++ b/ec2-instance/tasks/net-info.yml
@@ -11,7 +11,7 @@
       vpc-id: "{{ default_vpc['vpcs'][0]['vpc_id'] }}"
   register: subnet_info
 
-# Use jinja to select a random subnet from the list of subnet ids
+# Select a random subnet from the list of subnet ids
 - set_fact:
     vpc_id: "{{ default_vpc['vpcs'][0]['vpc_id'] }}"
     random_subnet: "{{ subnet_info.subnets|map(attribute='id')|list|random }}"
